# YoutubeTranslator

./: .gitignore  gemini.md  gemini_models_list.txt  main.py  package.json  pyproject.toml
Electron/: loading.html  main.js
Electron/main/: index.js
Electron/preload/: index.js
Electron/renderer/: index.html  renderer.js  style.css
Python/: check_gemini_models.py  main.py  pyproject.toml  whisper_worker.py
Python/download/: downloader.py
Python/subtitleEx/: download_fix.py  main.py  sense_downloader.py  sense_worker.py  whisper_downloader.py  whisper_worker.py
YoutubeTranslator/: apiver.txt  main.py  rule.txt
YoutubeTranslator/app/: __init__.py  config.py  logexcutor.py  path.py  setting_service.py
YoutubeTranslator/handler/: __init__.py  detail.py  download.py  log.py  process.py  queue_manager.py  simple.py  task_runner.py
YoutubeTranslator/logic/: UrlManger.py  __init__.py  combine.py  combine_timeline.py  downloader.py  queue_translate.py  split.py  translate.py
YoutubeTranslator/ui/: __init__.py  factory.py  selectors.py
app/: __init__.py  config.py  setting_service.py
app/handler/: __init__.py  download.py  setting.py  simple.py  task_runner.py
app/log/: __init__.py  executor.py  handler.py  layout.py  manager.py  section.py
app/logic/: UrlManger.py  combine.py  downloader.py  translate.py
app/ui/: __init__.py  factory.py
handler/: setting.py
handler/steps/: split_step.py
logic/: translate.py
python/: main.py
scripts/: smoke_test.py
tool/: deploy.bat  test_build.bat
youtubetranslator/: main.py  path.py  path_service.py
(+244 files in other folders)
