[project]
name = "youtubetranslator"
version = "0.1.0"
description = ""
authors = [
    {name = "Mingyu-You",email = "40035477+Mingyu-You@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flet (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
